gator/grammar/TemplateParser.py
# Generated from gator/grammar/TemplateParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TemplateParser ( Parser ):

    grammarFileName = "TemplateParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'</template>'", "'<exec>'", 
                     "'{{'", "<INVALID>", "'<'", "'>'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "OPEN_TEMPLATE", "CLOSE_TEMPLATE", "EXEC_OPEN", 
                      "EXPR_OPEN", "CONTENT", "OPEN_TAG", "CLOSE_TAG", "OPEN_SINGLE_BRACE", 
                      "CLOSE_SINGLE_BRACE", "TEXT", "WS", "IDENT", "EXEC_BODY", 
                      "EXPR_BODY" ]

    RULE_root = 0
    RULE_content = 1
    RULE_element = 2
    RULE_template_elem = 3
    RULE_content_elem = 4
    RULE_exec_element = 5
    RULE_expr_element = 6
    RULE_text = 7

    ruleNames =  [ "root", "content", "element", "template_elem", "content_elem", 
                   "exec_element", "expr_element", "text" ]

    EOF = Token.EOF
    OPEN_TEMPLATE=1
    CLOSE_TEMPLATE=2
    EXEC_OPEN=3
    EXPR_OPEN=4
    CONTENT=5
    OPEN_TAG=6
    CLOSE_TAG=7
    OPEN_SINGLE_BRACE=8
    CLOSE_SINGLE_BRACE=9
    TEXT=10
    WS=11
    IDENT=12
    EXEC_BODY=13
    EXPR_BODY=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def content(self):
            return self.getTypedRuleContext(TemplateParser.ContentContext,0)


        def EOF(self):
            return self.getToken(TemplateParser.EOF, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = TemplateParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.content()
            self.state = 17
            self.match(TemplateParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TemplateParser.TextContext)
            else:
                return self.getTypedRuleContext(TemplateParser.TextContext,i)


        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TemplateParser.ElementContext)
            else:
                return self.getTypedRuleContext(TemplateParser.ElementContext,i)


        def getRuleIndex(self):
            return TemplateParser.RULE_content

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContent" ):
                return visitor.visitContent(self)
            else:
                return visitor.visitChildren(self)




    def content(self):

        localctx = TemplateParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_content)
        self._la = 0 # Token type
        try:
            self.state = 31
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.text()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1984) != 0):
                    self.state = 20
                    self.text()


                self.state = 27 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 23
                    self.element()
                    self.state = 25
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1984) != 0):
                        self.state = 24
                        self.text()


                    self.state = 29 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 58) != 0)):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def template_elem(self):
            return self.getTypedRuleContext(TemplateParser.Template_elemContext,0)


        def content_elem(self):
            return self.getTypedRuleContext(TemplateParser.Content_elemContext,0)


        def exec_element(self):
            return self.getTypedRuleContext(TemplateParser.Exec_elementContext,0)


        def expr_element(self):
            return self.getTypedRuleContext(TemplateParser.Expr_elementContext,0)


        def getRuleIndex(self):
            return TemplateParser.RULE_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = TemplateParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_element)
        try:
            self.state = 37
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.template_elem()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.content_elem()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.exec_element()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.expr_element()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Template_elemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_TEMPLATE(self):
            return self.getToken(TemplateParser.OPEN_TEMPLATE, 0)

        def CLOSE_TEMPLATE(self):
            return self.getToken(TemplateParser.CLOSE_TEMPLATE, 0)

        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TemplateParser.TextContext)
            else:
                return self.getTypedRuleContext(TemplateParser.TextContext,i)


        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TemplateParser.ElementContext)
            else:
                return self.getTypedRuleContext(TemplateParser.ElementContext,i)


        def getRuleIndex(self):
            return TemplateParser.RULE_template_elem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate_elem" ):
                return visitor.visitTemplate_elem(self)
            else:
                return visitor.visitChildren(self)




    def template_elem(self):

        localctx = TemplateParser.Template_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_template_elem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(TemplateParser.OPEN_TEMPLATE)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1984) != 0):
                self.state = 40
                self.text()


            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 58) != 0):
                self.state = 43
                self.element()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1984) != 0):
                    self.state = 44
                    self.text()


                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(TemplateParser.CLOSE_TEMPLATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Content_elemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTENT(self):
            return self.getToken(TemplateParser.CONTENT, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_content_elem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContent_elem" ):
                return visitor.visitContent_elem(self)
            else:
                return visitor.visitChildren(self)




    def content_elem(self):

        localctx = TemplateParser.Content_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_content_elem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(TemplateParser.CONTENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exec_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXEC_OPEN(self):
            return self.getToken(TemplateParser.EXEC_OPEN, 0)

        def EXEC_BODY(self):
            return self.getToken(TemplateParser.EXEC_BODY, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_exec_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExec_element" ):
                return visitor.visitExec_element(self)
            else:
                return visitor.visitChildren(self)




    def exec_element(self):

        localctx = TemplateParser.Exec_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exec_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(TemplateParser.EXEC_OPEN)
            self.state = 57
            self.match(TemplateParser.EXEC_BODY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXPR_OPEN(self):
            return self.getToken(TemplateParser.EXPR_OPEN, 0)

        def EXPR_BODY(self):
            return self.getToken(TemplateParser.EXPR_BODY, 0)

        def getRuleIndex(self):
            return TemplateParser.RULE_expr_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_element" ):
                return visitor.visitExpr_element(self)
            else:
                return visitor.visitChildren(self)




    def expr_element(self):

        localctx = TemplateParser.Expr_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(TemplateParser.EXPR_OPEN)
            self.state = 60
            self.match(TemplateParser.EXPR_BODY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(TemplateParser.TEXT)
            else:
                return self.getToken(TemplateParser.TEXT, i)

        def OPEN_TAG(self, i:int=None):
            if i is None:
                return self.getTokens(TemplateParser.OPEN_TAG)
            else:
                return self.getToken(TemplateParser.OPEN_TAG, i)

        def CLOSE_TAG(self, i:int=None):
            if i is None:
                return self.getTokens(TemplateParser.CLOSE_TAG)
            else:
                return self.getToken(TemplateParser.CLOSE_TAG, i)

        def OPEN_SINGLE_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TemplateParser.OPEN_SINGLE_BRACE)
            else:
                return self.getToken(TemplateParser.OPEN_SINGLE_BRACE, i)

        def CLOSE_SINGLE_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TemplateParser.CLOSE_SINGLE_BRACE)
            else:
                return self.getToken(TemplateParser.CLOSE_SINGLE_BRACE, i)

        def getRuleIndex(self):
            return TemplateParser.RULE_text

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitText" ):
                return visitor.visitText(self)
            else:
                return visitor.visitChildren(self)




    def text(self):

        localctx = TemplateParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_text)
        self._la = 0 # Token type
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(TemplateParser.TEXT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 63
                    self.match(TemplateParser.TEXT)


                self.state = 70 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 66
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 960) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 68
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==10:
                        self.state = 67
                        self.match(TemplateParser.TEXT)


                    self.state = 72 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 960) != 0)):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





